# StateManager

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
docker/: redis.conf
docs/: ARCHITECTURE.md  BUILD_GUIDE.md  CMAKE.md  LOGGING.md  TESTING.md  THREAD_POOL.md
examples/: CMakeLists.txt  basic_demo.cpp  multithreaded_demo.cpp  pub_sub_demo.cpp
examples/logging/: CMakeLists.txt  README.md  advanced_logging_example.cpp  custom_logger_example.cpp
include/: StateManagement.h
include/client/: ClientIface.h  RedisChannel.h  RedisClient.h  RedisConfig.h  RedisStorage.h
include/core/: StateManager.h  StateManagerIface.h
include/logging/: DefaultLogger.h  LogLevel.h  LoggerFactory.h  LoggerIface.h
include/return/: StateObj.h
include/thread/: ThreadPool.h
src/client/: RedisChannel.cpp  RedisClient.cpp  RedisStorage.cpp
src/core/: StateManager.cpp
src/logging/: DefaultLogger.cpp  LoggerFactory.cpp
src/thread/: ThreadPool.cpp
tests/: CMakeLists.txt  test_logger.cpp  test_redis_channel.cpp  test_redis_client.cpp  test_state_manager.cpp  test_threadpool.cpp
